# wit-bindgen-variant-codegen-issue

./: Cargo.toml  README.md
crates/wasm/: Cargo.toml  build.rs
crates/wasm/src/: main.rs
crates/wasm/wit/: component.wit  entity.wit  guest.wit  main.wit
guest/: Cargo.toml  guest.wasm
guest/src/: lib.rs  server.rs  wit.rs
