[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
wasi-common = { workspace = true }
wasi-cap-std-sync = { workspace = true }
async-trait = { workspace = true }

ambient_wasmtime_wasi = { path = "../wasmtime_wasi" }

[build-dependencies]
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true }